# custom_allocator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  lgtm.yml
.github/workflows/: cmake_build_test.yml
cmake/: ComplierWarnings.cmake  Conan.cmake  PreventInSource.cmake
cmake/scripts/: dev-tools.cmake
custom_allocator/: CMakeLists.txt  custom_allocator.cpp  custom_allocator.h
include/custom_allocator/: lkl_malloc.h
src/: CMakeLists.txt  lkl_malloc.c
test/: CMakeLists.txt  all_tests.cpp  lkl_malloc_test.cpp  mock_sbrk.cpp  mock_sbrk.h
