# CMakeList.txt : CMake project for custom_allocator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (custom_allocator "custom_allocator.cpp" "custom_allocator.h")

# TODO: Add tests and install targets if needed.
